# attendance_tracker

./: .gitignore  README.md  attendance_tracker.ipynb  attendance_tracker.py  meetingAttendanceReport_Parser.ipynb  pyproject.toml  requirements.txt  settings.py  workspace.code-workspace
