[tool.poetry]
name = "attendance_tracker"
version = "0.1.0"
description = "Take a folder of csv files and produce attedance reports. Special support for MS Teams meetingAttedanceReport.csv files"
authors = ["Benjamin Davidson <ben.davidson@dynatrace.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
pandas = ""
python-dotenv = "^0.19.2"
simplelogging = "^0.11.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
